--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,16 @@ subprojects {
     dependencies {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+        compileOnly 'org.projectlombok:lombok:1.18.24'
+        annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+        testCompileOnly 'org.projectlombok:lombok:1.18.24'
+        testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+        implementation 'org.mapstruct:mapstruct:1.5.3.Final'
+
+        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
     }
 
     test {
