--- a/module-service/build.gradle
+++ b/module-service/build.gradle
@@ -14,6 +14,9 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.10.0'
     implementation project(":module-repository")
+
+    implementation 'org.mockito:mockito-junit-jupiter:3.8.0'
+
 }
 
 test {
