--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,13 @@ subprojects {
     dependencies {
         testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
         testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+        testImplementation 'org.mockito:mockito-junit-jupiter:4.11.0'
+        testImplementation 'org.mockito:mockito-core:4.11.0'
+
+        testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
+
+        testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
+
 
         compileOnly 'org.projectlombok:lombok:1.18.24'
         annotationProcessor 'org.projectlombok:lombok:1.18.24'
