changes in tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 /.idea/
 /test-output/
 /build/
-/.idea/
 /.gradle/
 
 /module-repository/build/
 /module-main/build/
 /module-service/build/
-/module-web/build/
+/module-web/build/*
 /solution/
